--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
   <artifactId>desafio</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>desafio</name>
-  <description>Projeto Maven gerado a partir do ZIP fornecido</description>
 
   <properties>
     <maven.compiler.release>17</maven.compiler.release>
@@ -24,6 +23,13 @@
       <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+    <groupId>com.opencsv</groupId>
+    <artifactId>opencsv</artifactId>
+    <version>5.9</version> <!-- Use a versão mais recente disponível -->
+  </dependency>
+
   </dependencies>
 
   <build>
